docs/development/k8s-resources/mailpit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit
  labels:
    app: mailpit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailpit
  template:
    metadata:
      labels:
        app: mailpit
    spec:
      containers:
        - name: mailpit
          image: axllent/mailpit:latest
          ports:
            - containerPort: 8025  # Web UI
            - containerPort: 1025  # SMTP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mailpit
  labels:
    app: mailpit
spec:
  selector:
    app: mailpit
  ports:
    - name: http
      port: 8025
      targetPort: 8025
    - name: smtp
      port: 1025
      targetPort: 1025
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: mailpit.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailpit
                port:
                  number: 8025
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mailpit-allow-postfix
  namespace: ecosystem
spec:
  podSelector:
    matchLabels:
      app: mailpit

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              dogu.name: postfix
      ports:
        - protocol: TCP
          port: 1025
